--- a/stoneborn.html
+++ b/stoneborn.html
@@ -49,11 +49,11 @@
         <div class="race-disciplines"><h2>Race Disciplines</h2></div>
         <div class="race-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            S<br>
-            S            
+            Fortifier<br>
+            Mudman            
             <h3><a href="#minors">Minors</a></h3>
-            P<br>
-            T           
+            Blessed Symbol<br>
+            Sturdy           
         </div>
     </div>           
 
@@ -63,14 +63,14 @@
         <div class="container-race-powers">        
             <div class="header-race-powers">
                 <div>
-                    <h2 id="wild-charge">Wild Charge</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Disc_WildCharge.png">
+                    <h2 id="stone-skin">Stone Skin</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Disc_StoneSkin.png">
                 </div>                           
             </div>
             <div class="race-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>23 S</div>
+                    <div>45 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
@@ -78,67 +78,11 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Rectangle</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div>5 M</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                    <div>Instant</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Duration.png">
-                    <div>15 S</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Restore.png">
-                    <div></div>
-                </div>
-            </div>    
-                <p class="info">Charges you forward 15M dealing 119 damage to enemies in your path. 
-                    Wild Charge applies an Armor Tear to all hit, wich reduces all Final Physical 
-                    Mitigation by 10% for 15 seconds.<br><br>
-                    Enemies may be pushed back depending on how close you are to them when you initiate 
-                    the charge.
-                </p>        
-        </div>
-        <div class="container-race-powers">        
-            <div class="header-race-powers">
-                <div>
-                    <h2 id="rear-kick">Rear Kick</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Cntr_RearKick.png">
-                </div>                           
-            </div>
-            <div class="race-powers-cooldown-info">
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>30 S</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Behind Caster</div>
+                    <div>Self</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_AreaSize.png">
@@ -150,24 +94,27 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Duration.png">
-                    <div></div>
+                    <div>6 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div></div>
+                    <div>Resource</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div>5 M</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Restore.png">
                     <div></div>
                 </div>
             </div>    
-                <p class="info">Kicks behind you inflicting Knockdown and causing 94 damage.
+                <p class="info">Hardens your skin dramatically increasing Damage Reduction by 50% and making
+                    you Poison Immune for 6 seconds, at the cost of reducing any healing done to you by
+                    50.
                 </p>        
         </div>
+        
     </section>
 
     <h1 class="sub-header">Disciplines</h1>
@@ -177,31 +124,31 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="dryad">Dryad</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_Dryad.png">
+                    <h2 id="fortifier">Fortifier</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_Fortifier.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Elken, Nature</p>
+                    <p>Trait: Stoneborn, Protection, Battle</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Healing Bonus: +3%</p>
-                    <p>Support Power: +100</p>
+                    <p>Barrier Bonus: +100</p>
+                    <p>Physical Resistance: +300</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Blast Of Leaves</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_BlastOfLeaves.png">
-                            <p>Blasts Leaves healing allies in front of you for 188 Health 16 times over 8
-                                seconds while you channel.
+                            <h3>Sanctuary</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_PowerRuneSanctuary.png">
+                            <p>Defends an area with a runic symbol increasing allies' Resist All by 2000 for
+                                4 seconds.
                             </p>
                         </div>
                         <div>
-                            <h3>Nature's Avatar</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>Empowers an ally, increasing their Damage Bonus, Critical Strike, Critical Damage
-                                and Personal Damage Modifier by 20% and Power Damage Bonus: Melee by 0% while you
-                                channel. 
+                            <h3>Overwhelming Odds</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_OverwhelmingOdds.png">
+                            <p>Increasing your Resist All stat by 10% for 15 when three or more enemies are
+                                within 10M.<br><br>
+                                This does not increase Bleed Mitigation Bonus. 
                             </p>
                         </div>                                       
                 </div>                                            
@@ -210,35 +157,36 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="sun-worshiper">Sun Worshiper</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_SunWorshiper.png">
+                    <h2 id="mudman">Mudman</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_Mudman.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Light, Fire</p>
+                    <p>Trait: Knight, Stoneborn, Plague, Nature</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Elemental Resictance: +300</p>
-                    <p>Support Power: +100</p>
+                    <p>Barrier Bonus: +100</p>
+                    <p>Physical Resictance: +300</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Chain Heal</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ChainHeal.png">
-                            <p>Heals a targeted ally for 111 Health and then chains to an additional nearby
-                                ally that is 30% less effective.
+                            <h3>Muck Spatter</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_MuckSpatter.png">
+                            <p>Empowers you for 18 seconds, causing Crushing attacks made against you to afflict
+                                nearby enemies with Blindness and Corruption.<br><br>
+                                Corruption deals 250 Nature damage 2 times over 8 seconds.  
                             </p>
                         </div>
                         <div>
-                            <h3>Cleanse</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_Purgative.png">
-                            <p>Removes all Bleeds, Diseases, Damnation, Poisons and Aura Emitters from your
-                                group members and gives a short Immunity to those removed. Increses your Bleed
-                                Resictances by 2000 for 12 seconds.
+                            <h3>Jelly Skin</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_JellySkin.png">
+                            <p>Protects you for 15 seconds with a skin like rubber granting you a barrier with
+                                immunity to Crushing damage and healing you for 183 health 3 times over 8 
+                                seconds after the barrier is gone.
                             </p>
-                        </div>                                         
-                </div>                                            
-            </div>                                               
+                        </div>                 
+                </div>
+            </div>    
         </div>
     </section>
 
@@ -248,46 +196,46 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="pack-avatar">Pack Avatar</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_PackAvatar.png">
+                    <h2 id="blessed-symbol">Blessed Symbol</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_BlessedSymbol.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Elken</p>
+                    <p>Trait: Cleric, Stoneborn</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Health: +500</p>                    
+                    <p>Healing Bonus: +3%</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Pack Avatar</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Drud_PackAvatar.png">                        
-                        <p>Empowers your group, increasing Damage Bonus and Critical Strike by 10% for
-                            20 seconds.
-                        </p>
-                    </div>               
+                        <h3>Blessed Symbol</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_FortuitiousBlessings.png">                        
+                        <p>Increases your Critical Healing Chance by 15 and Critical Healing Amount by
+                            15 for 20 seconds when you drop below 50% health.<br>This cannot accur more than
+                            once every 30 seconds.
+                        </p>                           
+                    </div>                                          
                 </div>
-            </div>
+            </div>    
         </div>
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="toughness">Toughness</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Toughness.png">
+                    <h2 id="sturdy">Sturdy</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Sturdy.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Templar, Centaur, Fire, Light, Music</p>
+                    <p>Trait: Myrmidon, Stoneborn, Nature, Plague, Wind, Fire, Frost, Death</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Physical Resistance: +300</p>                    
+                    <p>Crushing Resictance: +300</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Toughness</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Toughness.png">                        
-                        <p>Strengthens group members and you increasing their Maximum Health by 1500
-                            for 45 seconds.
+                        <h3>Sturdy</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Sturdy.png">                        
+                        <p>Reiforces your body, reducing Health loss by 15% when your Health is above 85%.
                         </p>
                     </div>               
                 </div>
