--- a/elken.html
+++ b/elken.html
@@ -213,7 +213,7 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="sun-worshiper">Forest Creature</h2>            
+                    <h2 id="forest-creature">Forest Creature</h2>            
                     <img src="images/Discipline/Major/Icon_Disc_Major_ForestCreature.png">
                 </div>
                 <div>
