--- a/woodelf.html
+++ b/woodelf.html
@@ -46,11 +46,11 @@
         <div class="race-disciplines"><h2>Race Disciplines</h2></div>
         <div class="race-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            S<br>
-            S            
+            Forest Creature<br>
+            Naiad            
             <h3><a href="#minors">Minors</a></h3>
-            P<br>
-            T           
+            Blood Rose<br>
+            Moon Elf Heritage           
         </div>
     </div>           
 
@@ -60,14 +60,14 @@
         <div class="container-race-powers">        
             <div class="header-race-powers">
                 <div>
-                    <h2 id="wild-charge">Wild Charge</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Disc_WildCharge.png">
+                    <h2 id="camouflage">Camouflage</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Disc_Camouflage.png">
                 </div>                           
             </div>
             <div class="race-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>23 S</div>
+                    <div>45 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
@@ -75,27 +75,27 @@
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Rectangle</div>
+                    <div>Self</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div>5 M</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                    <div>Instant</div>
+                    <div>Toggle</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Duration.png">
-                    <div>15 S</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div></div>
+                    <div>Stamina</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Range.png">
@@ -106,65 +106,12 @@
                     <div></div>
                 </div>
             </div>    
-                <p class="info">Charges you forward 15M dealing 119 damage to enemies in your path. 
-                    Wild Charge applies an Armor Tear to all hit, wich reduces all Final Physical 
-                    Mitigation by 10% for 15 seconds.<br><br>
-                    Enemies may be pushed back depending on how close you are to them when you initiate 
-                    the charge.
+                <p class="info">Hides you from sight as long as you are standing still and not in
+                    combat.<br><br>
+                    It will take 3 seconds to become Hidden after you stop moving.
                 </p>        
         </div>
-        <div class="container-race-powers">        
-            <div class="header-race-powers">
-                <div>
-                    <h2 id="rear-kick">Rear Kick</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Cntr_RearKick.png">
-                </div>                           
-            </div>
-            <div class="race-powers-cooldown-info">
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>30 S</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Behind Caster</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                    <div>Instant</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Duration.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div></div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div>5 M</div>
-                </div>
-                <div class="cooldown-img">
-                    <img src="images/UI_PowerAttributeIcon_Restore.png">
-                    <div></div>
-                </div>
-            </div>    
-                <p class="info">Kicks behind you inflicting Knockdown and causing 94 damage.
-                </p>        
-        </div>
+        
     </section>
 
     <h1 class="sub-header">Disciplines</h1>
@@ -174,56 +121,56 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="dryad">Dryad</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_Dryad.png">
+                    <h2 id="forest-creature">Forest Creature</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_ForestCreature.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Elken, Nature</p>
+                    <p>Trait: Elken, Wood Elf, Nature</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Healing Bonus: +3%</p>
+                    <p>Critical Healing Chance: +2%</p>
                     <p>Support Power: +100</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Blast Of Leaves</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_BlastOfLeaves.png">
-                            <p>Blasts Leaves healing allies in front of you for 188 Health 16 times over 8
-                                seconds while you channel.
+                            <h3>Pixie Dust</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_PixieDust.png">
+                            <p>Blankets the targeted area with Pixie Dust, increasing Personal Healing Modifier
+                                by 25% for 30 seconds..
                             </p>
                         </div>
                         <div>
-                            <h3>Nature's Avatar</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_">
-                            <p>Empowers an ally, increasing their Damage Bonus, Critical Strike, Critical Damage
-                                and Personal Damage Modifier by 20% and Power Damage Bonus: Melee by 0% while you
-                                channel. 
+                            <h3>Slow Stake</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Rngr_ArcherStake.png">
+                            <p>Creates a field, Snaring any enemies in it every second for 15 seconds as long
+                                they remain near the Stake.
                             </p>
-                        </div>                                       
+                        </div>                                         
                 </div>                                            
             </div>                                               
         </div>
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="sun-worshiper">Sun Worshiper</h2>            
-                    <img src="images/Discipline/Major/Icon_Disc_Major_SunWorshiper.png">
+                    <h2 id="naiad">Naiad</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_Naiad.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Light, Fire</p>
+                    <p>Trait: Wood Elf, Light, Dark</p>
                     <p>Slot: Major</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Elemental Resictance: +300</p>
-                    <p>Support Power: +100</p>
+                    <p>Critical Healing Chance: +2%</p>
+                    <p>Healing Bonus: +3%</p>
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                         <div>
-                            <h3>Chain Heal</h3>
-                            <img src="images/Powers/Icon_Powers_Graphic_Disc_ChainHeal.png">
-                            <p>Heals a targeted ally for 111 Health and then chains to an additional nearby
-                                ally that is 30% less effective.
+                            <h3>Fountain Of Life</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_FountainOfLife.png">
+                            <p>Creates a Fountain Of Life at the targeted location which chain heals nearby
+                                allies when one enters and periodically while near or in the Fountain for
+                                37 health. This lasts for 15 seconds or 40 heal triggers.
                             </p>
                         </div>
                         <div>
@@ -231,7 +178,7 @@
                             <img src="images/Powers/Icon_Powers_Graphic_Disc_Purgative.png">
                             <p>Removes all Bleeds, Diseases, Damnation, Poisons and Aura Emitters from your
                                 group members and gives a short Immunity to those removed. Increses your Bleed
-                                Resictances by 2000 for 12 seconds.
+                                Resistances by 2000 for 12 seconds.
                             </p>
                         </div>                                         
                 </div>                                            
@@ -245,22 +192,22 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="pack-avatar">Pack Avatar</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_PackAvatar.png">
+                    <h2 id="blood-rose">Blood Rose</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_BloodRose.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Centaur, Elken</p>
+                    <p>Trait: Wood Elf, Nature, Justice, Dark</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Health: +500</p>                    
+                    <p>Piercing Resistance: +300</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Pack Avatar</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Drud_PackAvatar.png">                        
-                        <p>Empowers your group, increasing Damage Bonus and Critical Strike by 10% for
-                            20 seconds.
+                        <h3>Blood Rose</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_ProtectiveThorns.png">                        
+                        <p>Grants a Thornshield buff to yourself or group member when you heal them.<br><br>
+                            Lifesteal healing does not trigger Blood Rose.
                         </p>
                     </div>               
                 </div>
@@ -269,22 +216,22 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="toughness">Toughness</h2>            
-                    <img src="images/Discipline/Minor/Icon_Disc_Minor_Toughness.png">
+                    <h2 id="moon-elf-heritage">Moon Elf Heritage</h2>            
+                    <img src="images/Discipline/Minor/Icon_Disc_Minor_MoonElfHeritage.png">
                 </div>
                 <div>
                     <h2 id="requirements">Requirements</h2>
-                    <p>Trait: Templar, Centaur, Fire, Light, Music</p>
+                    <p>Trait: Half Elf, Wood Elf</p>
                     <p>Slot: Minor</p>
                     <h2 id="statistics">Statistics</h2>
-                    <p>Physical Resistance: +300</p>                    
+                    <p>Health: +500</p>                    
                     <h2>Discipline</h2>
                     <h6>Powers Granted</h6>
                     <div>
-                        <h3>Toughness</h3>
-                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Toughness.png">                        
-                        <p>Strengthens group members and you increasing their Maximum Health by 1500
-                            for 45 seconds.
+                        <h3>Moon Elf Heritage</h3>
+                        <img src="images/Powers/Icon_Powers_Graphic_Disc_Racial_WoodElf.png">                        
+                        <p>Increases your Perception by 25, Ranged Distance Bonus by 10, Far-sight by
+                            10 and Attack Power by 50 during the night.
                         </p>
                     </div>               
                 </div>
