--- a/stoneborn.html
+++ b/stoneborn.html
@@ -30,7 +30,7 @@
 <body>
     <div class="race-container">
         <div class="race-image"><img src="images/Race/UI_Icon_CharCreate_Race_Stoneborn_01.png" width="250rem" height="250rem"></div>
-        <div class="race-name"><h1>Half Stoneborn</h1></div>
+        <div class="race-name"><h1>Stoneborn</h1></div>
         <div class="race-classes"><h2>Available Classes</h2></div>
         <div class="container-class-icons">    
             <div>
