--- a/battle.html
+++ b/battle.html
@@ -30,3 +30,47 @@
         <li><a href="wind.html">Wind</a></li>
     </ul>
 </nav>
+
+<body>
+<h1 class="sub-header">Disciplines</h1>
+    <h1 class="sub-header" id="majors">Majors</h1>
+
+    <section>
+        <div class="container-major">        
+            <div class="header-major">
+                <div>
+                    <h2 id="speed-demon">Speed Demon</h2>            
+                    <img src="images/Discipline/Major/Icon_Disc_Major_SpeedDemon.png">
+                </div>
+                <div>
+                    <h2 id="requirements">Requirements</h2>
+                    <p>Trait: Myrmidon, Centaur, Wind</p>
+                    <p>Slot: Major</p>
+                    <h2 id="statistics">Statistics</h2>
+                    <p>Elemental Resictance: +300</p>
+                    <p>Health: +500</p>
+                    <h2>Discipline</h2>
+                    <h6>Powers Granted</h6>
+                        <div>
+                            <h3>Closing Speed</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Retaliate.png">
+                            <p>Grants a Movement Speed Modifier increase by 2% for duration each time you are hit
+                                with a ranged attack as often as twice per second.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Marked For Death</h3>
+                            <img src="images/Powers/Icon_Powers_Graphic_Disc_PinCushion.png">
+                            <p>Places a mark on your target, you and your group members deal additional weapon
+                                damage to the target when you hit it for 20 seconds.
+                            </p>
+                        </div>                                       
+                </div>                                            
+            </div>                                               
+        </div>
+    </section>
+</body>
+<footer>
+    <h6>This material is used with the limited permission of ArtCraft Entertainment. No official affiliation or endorsement by ArtCraft Entertainment is stated or implied.</h6>
+</footer>
+</html>
