--- a/centaur.html
+++ b/centaur.html
@@ -291,3 +291,7 @@
         </div>
     </section>
 </body>
+<footer>
+    <h6>This material is used with the limited permission of ArtCraft Entertainment. No official affiliation or endorsement by ArtCraft Entertainment is stated or implied.</h6>
+</footer>
+</html>
