styles and battle domain

--- a/battle.html
+++ b/battle.html
@@ -33,7 +33,8 @@
 
 <body>
 
-    <div class="domain-disciplines"><h2>Domain Disciplines</h2>
+    <div class="domain-disciplines-container">
+        <h2 class="domain-name">Battle</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
             Arcane Archer<br>
@@ -44,6 +45,7 @@
             Siege Engineer<br>
             Waylayer
         </div>
+        <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Battle.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
             Archery<br>
