--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div><h1>Stoneborn</h1><a href="stoneborn.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Stoneborn_01.png" width="215rem" height="215rem"></a></div>
     </div>
     <div class="race-icon">        
-        <div><h1>Wood Elf</h1><a href="wood-elf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Wood-Elf_01.png" width="215rem" height="215rem"></a></div>
+        <div><h1>Wood Elf</h1><a href="woodelf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Wood-Elf_01.png" width="215rem" height="215rem"></a></div>
     </div>
 </section>
 <h1 id="domains-title" class="header-title">Domains</h1>
