--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <div><h1>Fae</h1><a href="fae.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Fae_01.png" width="215rem" height="215rem"></a></div>
     </div>
     <div class="race-icon">        
-        <div><h1>Half Elf</h1><a href="half-elf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Half-Elf_01.png" width="215rem" height="215rem"></a></div>
+        <div><h1>Half Elf</h1><a href="halfelf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Half-Elf_01.png" width="215rem" height="215rem"></a></div>
     </div>
     <div class="race-icon">        
-        <div><h1>Half Giant</h1><a href="half-giant.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Half-Giant_01.png" width="215rem" height="215rem"></a></div>
+        <div><h1>Half Giant</h1><a href="halfgiant.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Half-Giant_01.png" width="215rem" height="215rem"></a></div>
     </div>
     <div class="race-icon">        
-        <div><h1>High Elf</h1><a href="high-elf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_High-Elf_01.png" width="215rem" height="215rem"></a></div>
+        <div><h1>High Elf</h1><a href="highelf.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_High-Elf_01.png" width="215rem" height="215rem"></a></div>
     </div>
     <div class="race-icon">        
         <div><h1>Human</h1><a href="human.html" target="_blank"><img src="images/Race/UI_Icon_CharCreate_Race_Human_01.png" width="215rem" height="215rem"></a></div>
