--- a/battle.html
+++ b/battle.html
@@ -37,22 +37,27 @@
         <h2 class="domain-name">Battle</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Arcane Archer<br>
-            Fencer<br>
-            Master of Daggers<br>
-            Master of Swords<br>
-            Sharpshooter<br>
-            Siege Engineer<br>
-            Waylayer
+            Butcher<br>
+            Dazzler<br>
+            Demolisher<br>
+            Fortifier<br>
+            Heavy Hitter<br>
+            Hellraiser<br>
+            Paragon<br>
+            Scrapper<br>
+            Twister Of Fate
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Battle.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Archery<br>
-            Careless Whisper<br>
+            Eminently Punchable<br>
+            Marked For Death<br>
+            Payback<br>
+            Pound Of Flesh<br>
+            Thornshield<br>
             Sparring<br>
             Spirit Whip<br>
-            Thornshield 
+            Subvert Expectations 
         </div>
     </div>
 
