Dark domain and start rest domains

--- a/war.html
+++ b/war.html
@@ -30,3 +30,51 @@
         <li><a href="wind.html">Wind</a></li>
     </ul>
 </nav>
+
+<body>
+
+    <div class="domain-disciplines-container">
+        <h2 class="domain-name">War</h2>
+        <div class="domain-majors">
+            <h3><a href="#majors">Majors</a></h3>
+            Corrupted Soul<br>
+            Dead Eye<br>
+            Defender<br>
+            Lightfoot<br>
+            Lord Of The Forest<br>
+            Naiad<br>
+            Poisoner<br>
+            Windlord            
+        </div>
+        <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_War.png"></div>
+        <div class="domain-minors">
+            <h3><a href="#minors">Minors</a></h3>
+            Barbed Stake<br>
+            Blood Rose<br>
+            Concussive Trap<br>
+            Critical Dodge<br>            
+            Faerie Flames<br>
+            Faerie Trap<br>
+            Fortified Stakes<br>
+            Heads Up<br>
+            Recon<br>
+            Serrated Trap 
+        </div>
+    </div>
+
+    <h1 class="sub-header" id="majors">Majors</h1>
+
+    <section>
+
+    </section>
+
+    <h1 class="sub-header" id="minors">Minors</h1>
+
+    <section>
+
+    </section>
+</body>
+<footer>
+    <h6>This material is used with the limited permission of ArtCraft Entertainment. No official affiliation or endorsement by ArtCraft Entertainment is stated or implied.</h6>
+</footer>
+</html>
