--- a/nature.html
+++ b/nature.html
@@ -10,7 +10,7 @@
     <title>Crowfall Domains Nature</title>
 </head>
 
-<<nav>
+<nav>
     <ul>
         <li><a href="index.html">Index</a></li>
         <li><a href="battle.html">Battle</a></li>
