Made major minor index of domains

--- a/death.html
+++ b/death.html
@@ -37,28 +37,25 @@
         <h2 class="domain-name">Death</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Abominable Snowman<br>
+            Banshee<br>
+            Black Mask<br>
+            Blade Master<br>
+            Blood Feeder<br>
+            Grim Reaper<br>
+            Reality Warper<br>
+            Unholy Beast            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Death.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Blood Pact<br>
+            Burning Hatred<br>
+            First Wind<br>
+            Pound Of Flesh<br>            
+            Sparring<br>
+            Sturdy<br>
+            Underdog<br>             
         </div>
     </div>
 
