--- a/fire.html
+++ b/fire.html
@@ -37,28 +37,27 @@
         <h2 class="domain-name">Fire</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Arkon's Disciple<br>
+            Elementalist<br>
+            Friar<br>
+            Holy Avenger<br>
+            Lazarus'Disciple<br>
+            Master Of Focus<br>
+            Sun Worshiper<br>
+            Transcendent Warrior            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Fire.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Burning Hatred<br>
+            Eminently Punchable<br>
+            Finish Him<br>
+            Glass Cannon<br>            
+            Indulgence<br>
+            Last Resort<br>
+            Sturdy<br>
+            Subvert Expectations<br>
+            Toughness
         </div>
     </div>
 
