--- a/light.html
+++ b/light.html
@@ -37,28 +37,28 @@
         <h2 class="domain-name">Light</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
+            Cloisterer<br>
+            Exorcist<br>
+            Field Surgeon<br>
+            Friar<br>
             Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Pack Leader<br>
+            Pixie<br>
+            Sun Worshiper<br>
+            Transcendent Warrior            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Light.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
+            First Wind<br>
             Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Indulgence<br>
+            Meditation<br>            
+            Phantom Armor<br>
+            Resurrection<br>
+            Revenge<br>
+            Take Root<br>
+            Toughness
         </div>
     </div>
 
