--- a/music.html
+++ b/music.html
@@ -37,28 +37,30 @@
         <h2 class="domain-name">Music</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Bringer Of Life<br>
+            Commander<br>
+            Elementalist<br>
+            Entertainer<br>
+            Gapfinder<br>
+            Heavy Hitter<br>
+            Minstrel<br>
+            Troubadour            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Music.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
+            Careless Whisper<br>
+            Dirge Of Dissonance<br>
+            Glamour Weapon<br>
+            Guardian Rhythms<br>            
             Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Lament Of Sadness<br>
+            Last Resort<br>
+            Minor Accompaniment<br>
+            Phantom Armor<br>
+            Resurrection<br>
+            Song Of Speed<br>
+            Toughness 
         </div>
     </div>
 
