--- a/nature.html
+++ b/nature.html
@@ -37,28 +37,28 @@
         <h2 class="domain-name">Nature</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
+            Bringer Of Life<br>
+            Dryad<br>
+            Forest Creature<br>
+            Freedom Fighter<br>
+            Hydrologist<br>
             Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Mudman<br>
+            Pack Leader<br>
+            Pixie            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Nature.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
+            Banshee Wail<br>
+            Blood Rose<br>                        
+            Faerie Flames<br>            
             Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Reactionary<br>
+            Resurrection<br>
+            Sturdy<br>
+            Take Root<br>
+            Weapon Finesse 
         </div>
     </div>
 
