--- a/plague.html
+++ b/plague.html
@@ -37,28 +37,25 @@
         <h2 class="domain-name">Plague</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Banshee<br>
+            Deadly Infector<br>
+            Grim Reaper<br>
+            Mudman<br>
+            Plague Lord<br>
+            Poison Sapper<br>
+            Poisoned Trapper<br>
+            Poisoner            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Plague.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
             Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Cripple<br>
+            Pound Of Flesh<br>
+            Rupture Barrier<br>            
+            Sturdy<br>
+            Taste Of Poison<br>
+            Touch Of Rot
         </div>
     </div>
 
