--- a/storm.html
+++ b/storm.html
@@ -37,28 +37,26 @@
         <h2 class="domain-name">Storm</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
+            Avatar Of Storms<br>
+            Blitzer<br>
+            Flow Controller<br>
+            Hydrologist<br>
+            Pixie<br>
+            Reality Warper<br>
+            Unstable Mage<br>
             Windlord            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Icon_Storm.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Banshee Wail<br>
+            Burning Hatred<br>
+            Eminently Punchable<br>
+            First Wind<br>            
+            Glass Cannon<br>
+            Subvert Expectations<br>
+            Take Root<br>
+            Weapon Finesse
         </div>
     </div>
 
