--- a/war.html
+++ b/war.html
@@ -37,28 +37,27 @@
         <h2 class="domain-name">War</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Blade Dancer<br>
+            Blade Master<br>
+            Bloodletter<br>
+            Butcher<br>
+            Demolisher<br>
+            Dirty Fighter<br>
+            Hellraiser<br>
+            Knife Grinder<br>
+            Stalker<br>
+            Tubthumper            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_War.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
+            Blood Pact<br>
             Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Last Resort<br>
+            Marked For Death<br>
+            Sparring<br>
+            Spirit Whip<br>
+            Underdog<br> 
         </div>
     </div>
 
