--- a/wind.html
+++ b/wind.html
@@ -37,28 +37,25 @@
         <h2 class="domain-name">Wind</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
+            Escape Artist<br>
+            Freedom Fighter<br>
+            Night Terror<br>
+            Petrifier<br>
+            Speed Demon<br>
+            Tubthumper<br>
             Windlord            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Wind.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
+            Banshee Wail<br>
+            Burning Hatred<br>
             Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Payback<br>
+            Speedy Retaliate<br>
+            Sturdy<br>
+            Subvert Expectations<br>
+            Supreme Element 
         </div>
     </div>
 
