--- a/frost.html
+++ b/frost.html
@@ -37,28 +37,26 @@
         <h2 class="domain-name">Frost</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Abominable Snowman<br>
+            Elementalist<br>
+            Force Mage<br>
+            Frostbiter<br>
+            Frozen Dancer<br>
+            Master Of Focus<br>
+            Petrifier<br>
+            Reality Warper<br>
+            Tundra Mage            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Frost.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Finish Him<br>
+            Payback<br>
+            Revenge<br>
+            Rupture Barrier<br>            
+            Spirit Whip<br>
+            Sturdy<br>
+            Subvert Expectations            
         </div>
     </div>
 
