--- a/justice.html
+++ b/justice.html
@@ -37,28 +37,28 @@
         <h2 class="domain-name">Justice</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
             Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Friar<br>
+            Kane's Apostle<br>
+            Militant Mage<br>
+            Paragon<br>
+            Rune Caster<br>
+            Scrapper<br>
+            Shock Trooper<br>
+            Standard Bearer<br>
+            Transcendent Warrior            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Justice.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
+            Bearer's Insignia<br>
             Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Careless Whisper<br>
+            Dispel<br>            
+            Payback<br>
+            Reactionary<br>
+            Rune Shield<br>
+            Subvert Expectations
         </div>
     </div>
 
