--- a/protection.html
+++ b/protection.html
@@ -37,28 +37,26 @@
         <h2 class="domain-name">Protection</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Commander<br>
+            Flow Controller<br>
+            Force Mage<br>
+            Fortifier<br>
+            Holy Avenger<br>
+            Militant Mage<br>
+            Twister Of Fate<br>
+            Unstable Mage            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Protection.png"></div>
         <div class="domain-minors">
             <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
-            Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
-            Recon<br>
-            Serrated Trap 
+            Dispel<br>
+            Finish Him<br>
+            Glamour Weapon<br>
+            Phantom Armor<br>            
+            Rune Shield<br>
+            Rupture Barrier<br>
+            Take Root<br>
+            Weapon Finesse
         </div>
     </div>
 
