--- a/shadow.html
+++ b/shadow.html
@@ -37,28 +37,26 @@
         <h2 class="domain-name">Shadow</h2>
         <div class="domain-majors">
             <h3><a href="#majors">Majors</a></h3>
-            Corrupted Soul<br>
-            Dead Eye<br>
-            Defender<br>
-            Lightfoot<br>
-            Lord Of The Forest<br>
-            Naiad<br>
-            Poisoner<br>
-            Windlord            
+            Agent Provocateur<br>
+            Black Mask<br>
+            Gapfinder<br>
+            Master Of Darkness<br>
+            Nightstalker<br>
+            Reality Tripper<br>
+            Scrapper<br>
+            Waylayer            
         </div>
         <div class="domain-img"><img src="images/Domains/UI_Skill_Icon_Shadow.png"></div>
         <div class="domain-minors">
-            <h3><a href="#minors">Minors</a></h3>
-            Barbed Stake<br>
-            Blood Rose<br>
-            Concussive Trap<br>
+            <h3><a href="#minors">Minors</a></h3>            
             Critical Dodge<br>            
-            Faerie Flames<br>
-            Faerie Trap<br>
-            Fortified Stakes<br>
-            Heads Up<br>
+            Glass Cannon<br>
+            Marked For Death<br>
+            Payback<br>
+            Reactionary<br>
             Recon<br>
-            Serrated Trap 
+            Shadows Linger<br>
+            Weapon Finesse 
         </div>
     </div>
 
